# Bantool-2

./: .gitignore  .gitmodules  README.md  README.txt  dev-requirements.in  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  windows_install.bat  windows_run_bantool.bat
.github/workflows/: bantool-test.yml
CVS_Exporter/: CSV_Exporter.py  CVS_Exporter.py
User_validator/: validator.py
src/bantool/: __main__.py  bantool.py  browser.py  config.py  main.py  utils.py
src/csv_exporter/: csv_exporter.py
src/user_validator/: credentials.json  validator.py
tests/src/bantool/: test_config.json  test_config.py  test_main.py
