[metadata]
name = bantool
description= Twitch Bot Bantool
author = ""
author_email = ""
url = ""

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = 
    tqdm
    twitchAPI
    selenium
    colorama

[options.entry_points]
console_scripts =
	bantool = bantool.__main__.main

[isort]
atomic=true
lines_after_imports=2
lines_between_types=1
multi_line_output=5
line_length=88
not_skip=__init__.py
known_first_party =
    bantool
    tests
ignore_trailing_comma=true

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.9
mypy_path=typeshed/pyi:typeshed/imports

[tool:pytest]
addopts = -ra
testpaths = tests
; Add vendor and patched in addition to the default list of ignored dirs
; Additionally, ignore tasks, news, test subdirectories and peeps directory
norecursedirs =
    .* build
    dist
    CVS
    _darcs
    {arch}
    *.egg
    vendor
    patched
    news
    tasks
    docs
    tests/test_artifacts
    tests/pytest-pypi
    tests/pypi
    peeps
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
