[metadata]
name = bantool
description= Twitch Bot Bantool
author = ""
author_email = ""
url = ""

[options]
python_requires = ">=3.7"
package_dir =
    = src
zip_safe = True
packages = find:
include_package_data = True
install_requires = 
    tqdm
    twitchAPI
    selenium
    colorama

[options.entry_points]
console_scripts =
	bantool = bantool.main:main
    csv_exporter = csv_exporter.csv_exporter:main
    user_validator = user_validator.validator:main